# counter-mobile-app

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  generate.py  index.html  index.html.template  log.txt  log1.txt
.github/workflows/: android.yml
assets/: main.css  tailwind.css
src/: main.rs
