[package]
name = "counter-mobile-app"
version = "0.1.0"
authors = ["VuDucZuy <duczuyvu12@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# All platforms
dioxus = { version = "0.7.5" }
gloo-timers = { version = "0.3", features = ["futures"] }
log = "0.4"

# Android OS
[target.'cfg(target_os = "android")'.dependencies]
dioxus = { version = "0.7.5", features = ["mobile"] }
android_logger = "0.13"

# Web
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.7.5", features = ["web"] }
wasm-logger = "0.2"

[features]
# Leave the default field blank so dx can decide based on the --platform command.
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

# Optimize APK file size during release build.
[profile.release]
opt-level = 'z'    # Optimize file size
lto = true         # Link Time Optimization
codegen-units = 1
panic = 'abort'    # Reduce binary size
